--- a/client/src/assets/css/screen.css
+++ b/client/src/assets/css/screen.css
@@ -4,54 +4,34 @@
     visibility: hidden;
     flex-direction: column;
     position: absolute;
-    top: 52px;
-    /* right: 900%; */
+    align-items: center;
+    width: 100%;
+    top: 60px;
     background-color: rgba(0, 0, 0, 0.9);
-    width: 150px;
-    padding: 10px;
+    padding: 0;
+    margin: 0;
     cursor: pointer;
-    transform: translateX(-500%);
-    transition: transform 1s ease-out, visibility 1s;
+    overflow: hidden;
+    transform: translateX(-100%);
+    transition: transform 1.3s ease-out, -webkit-transform 1.3s ease-in-out,
+      -moz-transform 1.3, visibility 1.3s;
   }
 
   .nav-links.show {
     display: flex; /* Show the nav links when 'show' class is added */
-    transform: translateX(-120px);
-    transition: transform 1s ease-out, visibility 1s;
     visibility: visible;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: transform 1.3s ease-out, visibility 0s ease-in;
+    width: 100%;
+    height: 100vh;
+    z-index: 999;
+    padding: 20px;
   }
 
   .nav-toggle {
     visibility: visible;
   }
-}
-
-/* Extra small devices (phones, less than 576px) */
-@media (max-width: 575.98px) {
-  /* Your CSS for extra small devices */
-}
-
-/* Small devices (phones, 576px and up) */
-@media (min-width: 576px) {
-  /* Your CSS for small devices */
-}
-
-/* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-  /* Your CSS for medium devices */
-}
-
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-  /* Your CSS for large devices */
-}
-
-/* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-  /* Your CSS for extra large devices */
-}
-
-/* Extra extra large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) {
-  /* Your CSS for extra extra large devices */
 }
